Fix boxed type equality

Each boxed type has its own Python type, not PyGBoxed_Type. Use
PyObject_IsInstance instead of comparing against PyGBoxed_Type directly.

https://bugzilla.gnome.org/show_bug.cgi?id=677249

Signed-off-by: Martin Pitt <martinpitt@gnome.org>